# utilities

./: .gitignore  AGENTS.md  README.md  agents.md  conftest.py  utility_gap_analysis.md
Calculation tools/: README.md  (+3 more)
benchmark-llm/: README.md  bench  benchsdk.py  pyproject.toml
benchmark-llm/benchmark_llm/: __init__.py  cli.py  discovery.py  execution.py  metrics.py  plugin_api.py  plugin_runner.py  prompt_batch.py  repo_task.py  reporting.py  storage.py  util.py
benchmark-llm/docs/: cleanup_audit_20260411.md  cron_eval_benchmark_implementation_plan.md  cron_eval_open_questions.md
benchmark-llm/examples/: README.md
benchmark-llm/examples/cron-eval/: README.md  bench.yaml  models-openrouter.txt  prompt.txt  report_template.md
benchmark-llm/examples/logic-mini/: README.md  answers.jsonl  cases.jsonl  judge.yaml  responses.jsonl
benchmark-llm/examples/plugin-advanced/: README.md  bench.py
benchmark-llm/examples/policy-engine/: README.md  bench.yaml  models-openrouter.txt  prompt.txt  report_template.md
benchmark-llm/examples/shared/: demo_prompt_executor.py
benchmark-llm/tests/: test_cron_eval_example.py  test_plugin_mode.py  test_policy_engine_example.py  test_prompt_batch.py  test_repo_task.py
docker/llm_proxy/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/llm_proxy/docs/: design_document.md  implementation_plan.md
docker/llm_proxy/output/: README.md  opencode_provider_t3chat.json  t3chat_bookmarklet.html
docker/llm_proxy/scripts/: extract_from_curl.sh
docker/llm_proxy/tests/: test_config_generator.py  test_models.py
(+991 files in other folders)
