[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-llm"
version = "0.1.0"
description = "Filesystem-first LLM benchmark runner with prompt, repo-task, and plugin authoring modes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["benchmark_llm*"]

[tool.setuptools]
py-modules = ["benchsdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
